--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "gatsby-image": "^2.0.38",
     "gatsby-plugin-dark-mode": "^1.1.0",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-remark-prismjs": "^3.3.24",
